--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.1.0",
+    "@repo/eslint-config": "workspace:*",
+    "@sound-git/typescript-config": "workspace:*",
     "turbo": "latest"
   },
   "packageManager": "pnpm@8.9.0",
