--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,11 +24,17 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.2.0",
+    "@nestjs/typeorm": "^10.0.1",
+    "@sound-git/types": "workspace:*",
+    "dotenv": "^16.3.1",
     "joi": "^17.11.0",
+    "mysql2": "^3.7.0",
     "oci-common": "^2.75.0",
     "oci-objectstorage": "^2.75.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.19"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
